--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^24.0.15",
     "@types/supertest": "^6.0.3",
+    "@types/swagger-ui-express": "^4.1.8",
     "jest": "^30.0.4",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.3",
@@ -28,8 +29,10 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@asteasolutions/zod-to-openapi": "^8.0.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^4.0.5"
   }
 }
