--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -10,6 +10,8 @@ WORKDIR /app
 # Copy package files
 COPY package*.json ./
 
+RUN npm config set registry https://registry.npmjs.org/
+
 # Install all dependencies (including dev)
 RUN npm install
 
