--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@asteasolutions/zod-to-openapi": "^8.0.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "geolib": "^3.3.4",
     "swagger-ui-express": "^5.0.1",
     "zod": "^4.0.5"
   }
